[metadata]
name = gy_redis
version = 0.0.2
author = jeff7522553
author_email = jeff7522553@gmail.com
description = GuanYu for test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guanyuhoujeff/gy-redis
project_urls =
    Bug Tracker = https://github.com/guanyuhoujeff/gy-redis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
